# template

./: .coverage-tmp.html  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  build.sh  docker-compose.override.yaml.example  docker-compose.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  README.md  README_cn.md  devcontainer.json
.dvc/: config
.github/: CODEOWNERS  README.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: auto-gitea.yaml  auto-labeler.yml  auto_labeler.yml  build.yml  build_image.yml  build_package.yml  build_release.yml  changelog.yaml  code-quality-check.yaml  code-quality-check.yml  code-quality-master.yaml  code-quality-pr.yaml  deploy_docs.yml  gpt-code-review.yml  gpt-issue-labeler.yml  openai-code-review.yml  openai-commit.yml  openai-labeler.yml  pre-commit-updater.yml  pre-merge.yml  pull-request-pipeline.yml  release-drafter.yml  release_drafter.yaml  release_drafter.yml  semantic-pull-request.yml  test.yml  todo-issue.yml  todo-to-issue.yml
Reference/repo_template/hello/: index.html
Reference/repo_template/types/response/: index.html
Reference/template/hello/: index.html
Reference/template/types/response/: index.html
Scripts/gen_docs/: index.html
blog/: index.html
blog/2024/10/06/this-is-an-example-post-for-blog/: index.html
blog/archive/2024/: index.html
docker/: Dockerfile  Dockerfile.base  docker-compose.traefik.yaml
docker/mirror/: config.toml
docs/: index.md
docs/Reference/template/: hello.md
docs/Reference/template/types/: response.md
docs/Scripts/: gen_docs.md
docs/blog/posts/: example.md
docs/installation/: index.md  pip.md  rye.md  uv.md
installation/: index.html
installation/pip/: index.html
installation/rye/: index.html
installation/uv/: index.html
scripts/: build.sh  gen_docs.py  initpyrepo.go
search/: search_index.json
src/repo_template/: hello.py
src/repo_template/types/: response.py
src/template/: hello.py
src/template/types/: response.py
tests/: conftest.py  test_act.py  test_example.py  test_hello.py  test_pre_commit.py
